# Sloths

./: README.md  TensorFrame_Diseno_Arquitectonico.md  pyproject.toml
docs/: DOCUMENTATION.md
tensorframe/: __init__.py  construction.py  errors.py  frame.py  index.py  ml.py  ndtype.py  ops.py  schema.py  series.py  storage.py
tests/: test_construction.py  test_errors.py  test_frame.py  test_index.py  test_ml.py  test_ndtype.py  test_ops.py  test_schema.py  test_series.py  test_storage.py
